--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^8.57.0",
+    "@types/eslint": "^9.6.1",
     "@types/glob": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
