--- a/package.json
+++ b/package.json
@@ -61,8 +61,6 @@
   },
   "scripts": {
     "dev": "next dev --turbopack -p 9002",
-    "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
-    "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
     "start": "next start",
     "lint": "eslint src --ext ts --ext tsx --report-unused-disable-directives --max-warnings 0",
@@ -74,10 +72,8 @@
     "test": "node ./out/test/runTest.js"
   },
   "dependencies": {
-    "@babel/eslint-parser": "^7.27.0",
-    "@genkit-ai/googleai": "^1.0.4",
-    "@genkit-ai/next": "^1.0.4",
     "@hookform/resolvers": "^4.1.3",
+    "@opentelemetry/exporter-jaeger": "^2.0.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -104,7 +100,6 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "firebase": "^11.3.0",
-    "genkit": "^1.0.4",
     "lucide-react": "^0.475.0",
     "next": "15.2.3",
     "patch-package": "^8.0.0",
@@ -129,7 +124,6 @@
     "@vscode/test-electron": "^2.2.0",
     "eslint": "^8.57.1",
     "eslint-plugin-import": "^2.27.5",
-    "genkit-cli": "^1.0.4",
     "glob": "^8.1.0",
     "mocha": "^10.2.0",
     "postcss": "^8",
